Optimizations based on profiling.
Replaced container stack with linked list to avoid excessive resizing for deep containers.
Replaced EnumMap with direct arrays.
Made the LST annotation detection faster.
Refactors patch points to use a simple singly linked list implementation versus a red-black tree.

cr https://cr.amazon.com/r/3766594/